Fixed all issues with authentication, solved logic problem with admin button and canceled gap between flash mesages and navbar. Changed layout of theorems_creation page. Made application DRY creating a unique method for all resources to find the user of the created_by attribute.

--- a/app/assets/stylesheets/1st_load_framework.css.scss
+++ b/app/assets/stylesheets/1st_load_framework.css.scss
@@ -435,3 +435,11 @@ form.button_to {
   margin-top: 5px;
   max-width: 350px;
 }
+
+.alert.alert-dismissable {
+  margin-top: 0;
+}
+
+.navbar {
+  margin-bottom: 0;
+}
